namespace Imato.KptParser.KptCook.DomainModel;

public class LocalizedDate
{
    public KptDate? De { get; set; }
    public KptDate? Ee { get; set; }
}